--- a/css/directors-blog.css
+++ b/css/directors-blog.css
@@ -1182,7 +1182,7 @@ img {
   --bg-size: 80%;
   background: rgb(248, 248, 248);
   background: linear-gradient(180deg, rgb(248, 248, 248) 0%, rgb(248, 248, 248) var(--bg-size), rgb(255, 255, 255) var(--bg-size));
-  filter: progid:DXImageTransform.Microsoft.gradient(startColorstr="#f8f8f8",endColorstr="#ffffff",GradientType=1);
+  filter: progid:DXImageTransform.Microsoft.gradient(startColorstr="#f8f8f8", endColorstr="#ffffff", GradientType=1);
 }
 .quote img {
   width: 50%;
@@ -1190,7 +1190,7 @@ img {
   aspect-ratio: 134/103.5;
   -o-object-fit: cover;
      object-fit: cover;
-  border-radius: 0 0 10px 10px;
+  border-radius: 10px;
 }
 .quote .flex {
   width: 100%;
@@ -1239,6 +1239,63 @@ img {
   right: -12rem;
 }
 
+.question {
+  margin: 8.125rem 0;
+}
+.question img {
+  width: 35%;
+}
+
+.form {
+  margin-top: 3.75rem;
+  width: clamp(280px, 60%, 680px);
+}
+.form form {
+  width: 100%;
+}
+.form label {
+  display: block;
+  color: var(--clr-primary-900);
+  font-weight: var(--fw-medium);
+  margin-bottom: 0.625rem;
+}
+.form input,
+.form .input {
+  width: 100%;
+  margin-bottom: 1.5625rem;
+  padding: 1rem 1.25rem;
+  border: none;
+  outline: none;
+  border: 1px solid var(--clr-neutral-700);
+  border-radius: 10px;
+}
+.form textarea {
+  resize: vertical;
+  min-height: 8.875rem;
+  max-height: 18.75rem;
+}
+.form button {
+  max-height: 55px;
+  padding: 0.6rem 2.185rem;
+  margin-left: auto;
+}
+
+.answer {
+  padding: 1.875rem 2.1rem;
+  background-color: var(--clr-neutral-1000);
+  box-shadow: 0px 2px 10px rgba(211, 210, 210, 0.25);
+  border-radius: 10px;
+  margin: 1.25rem 0;
+}
+.answer .fs-200 {
+  color: var(--clr-primary-700);
+  margin-bottom: 2rem;
+}
+.answer .gray-text {
+  color: var(--clr-dark-500);
+  margin-bottom: 0.625rem;
+}
+
 @media screen and (max-width: 1117px) {
   .quote-text-descr {
     top: 2rem;
@@ -1280,5 +1337,11 @@ img {
   }
   .quote-text span {
     padding-left: 3rem;
+  }
+  .question .form {
+    width: 100%;
+  }
+  .question img {
+    display: none;
   }
 }
